More styles fixes; vertical overflow on short displays (landscape mobile) and margins on displays wider than 1920px (again)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,11 @@ body {
   display: flex;
 }
 
+.hint {
+  cursor: help;
+  text-decoration-style: dotted;
+}
+
 // Copied from .material-symbols-outlined class
 .material-icons {
   font-family: 'Material Symbols Outlined';
